--- a/index1.html
+++ b/index1.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página web simples</title>
+    
 </head>
 <body>
-    <h1>Lista simpes</h1>
+    <div>
+        <h1>Lista simpes</h1>
     <p>ordem aletória</p>
     <li>
         <ul>item 1</ul>
         <ul>item 2</ul>
         <ul>item 3</ul>
-    </li>
+    </li> 
+    <img src="" alt="">
+    </div>
+   
 </body>
 </html>
