--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
         <ul>item 2</ul>
         <ul>item 3</ul>
     </li> 
-    <img src="" alt="">
+    <img src="C:\Users\kelvi\Downloads\lab.png" alt="">
     </div>
    
 </body>
