--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página web simples</title>
+    <style>
+        h1 {
+            background-color: blue;
+        }
+        p {
+            font-size: 30px;
+            color: brown;
+        }
+
+    </style>
     
 </head>
 <body>
@@ -15,7 +25,13 @@
         <ul>item 2</ul>
         <ul>item 3</ul>
     </li> 
-    <img src="C:\Users\kelvi\Downloads\lab.png" alt="">
+    <li>
+        <ol>item10</ol>
+        <ol>item11</ol>
+        <ol>item13</ol>
+    </li>
+    <img src="C:\Users\kelvi\Downloads\lab.png" 
+    width="100px" height="100px">
     </div>
    
 </body>
